pp2/samples/tested/initial.frag.test

*** Error line 7.
void a;
      ^
*** syntax error

